stop remove overflow

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -28,7 +28,7 @@ html {
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* for very large screens */
